# clipTool

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/clipboard_manager/: __main__.py  column_select.py  history.py  hotkeys.py  main.py  models.py  monitor.py  ocr.py  overlay.py  picker.py  settings.py  tray.py
tests/: test_history.py  test_main.py  test_models.py  test_settings.py
